libqt6c/src/libqstandarditemmodel.hpp

typedef struct QBrush QBrush;
typedef struct QDataStream QDataStream;
typedef struct QFont QFont;
typedef struct QIcon QIcon;
typedef struct QModelIndex QModelIndex;
typedef struct QModelRoleDataSpan QModelRoleDataSpan;
typedef struct QSize QSize;
typedef struct QStandardItem QStandardItem;
typedef struct QStandardItemModel QStandardItemModel;
typedef struct QVariant QVariant;
QStandardItem* QStandardItem_new();
QStandardItem* QStandardItem_new2(const libqt_string text);
QStandardItem* QStandardItem_new3(const QIcon* icon, const libqt_string text);
QStandardItem* QStandardItem_new4(int rows);
QStandardItem* QStandardItem_new5(int rows, int columns);
QVariant* QStandardItem_Data(const QStandardItem* self, int role);
void QStandardItem_MultiData(const QStandardItem* self, QModelRoleDataSpan* roleDataSpan);
void QStandardItem_SetData(QStandardItem* self, const QVariant* value, int role);
void QStandardItem_ClearData(QStandardItem* self);
libqt_string QStandardItem_Text(const QStandardItem* self);
void QStandardItem_SetText(QStandardItem* self, const libqt_string text);
QIcon* QStandardItem_Icon(const QStandardItem* self);
void QStandardItem_SetIcon(QStandardItem* self, const QIcon* icon);
libqt_string QStandardItem_ToolTip(const QStandardItem* self);
void QStandardItem_SetToolTip(QStandardItem* self, const libqt_string toolTip);
libqt_string QStandardItem_StatusTip(const QStandardItem* self);
void QStandardItem_SetStatusTip(QStandardItem* self, const libqt_string statusTip);
libqt_string QStandardItem_WhatsThis(const QStandardItem* self);
void QStandardItem_SetWhatsThis(QStandardItem* self, const libqt_string whatsThis);
QSize* QStandardItem_SizeHint(const QStandardItem* self);
void QStandardItem_SetSizeHint(QStandardItem* self, const QSize* sizeHint);
QFont* QStandardItem_Font(const QStandardItem* self);
void QStandardItem_SetFont(QStandardItem* self, const QFont* font);
int QStandardItem_TextAlignment(const QStandardItem* self);
void QStandardItem_SetTextAlignment(QStandardItem* self, int textAlignment);
QBrush* QStandardItem_Background(const QStandardItem* self);
void QStandardItem_SetBackground(QStandardItem* self, const QBrush* brush);
QBrush* QStandardItem_Foreground(const QStandardItem* self);
void QStandardItem_SetForeground(QStandardItem* self, const QBrush* brush);
int QStandardItem_CheckState(const QStandardItem* self);
void QStandardItem_SetCheckState(QStandardItem* self, int checkState);
libqt_string QStandardItem_AccessibleText(const QStandardItem* self);
void QStandardItem_SetAccessibleText(QStandardItem* self, const libqt_string accessibleText);
libqt_string QStandardItem_AccessibleDescription(const QStandardItem* self);
void QStandardItem_SetAccessibleDescription(QStandardItem* self, const libqt_string accessibleDescription);
int QStandardItem_Flags(const QStandardItem* self);
void QStandardItem_SetFlags(QStandardItem* self, int flags);
bool QStandardItem_IsEnabled(const QStandardItem* self);
void QStandardItem_SetEnabled(QStandardItem* self, bool enabled);
bool QStandardItem_IsEditable(const QStandardItem* self);
void QStandardItem_SetEditable(QStandardItem* self, bool editable);
bool QStandardItem_IsSelectable(const QStandardItem* self);
void QStandardItem_SetSelectable(QStandardItem* self, bool selectable);
bool QStandardItem_IsCheckable(const QStandardItem* self);
void QStandardItem_SetCheckable(QStandardItem* self, bool checkable);
bool QStandardItem_IsAutoTristate(const QStandardItem* self);
void QStandardItem_SetAutoTristate(QStandardItem* self, bool tristate);
bool QStandardItem_IsUserTristate(const QStandardItem* self);
void QStandardItem_SetUserTristate(QStandardItem* self, bool tristate);
bool QStandardItem_IsDragEnabled(const QStandardItem* self);
void QStandardItem_SetDragEnabled(QStandardItem* self, bool dragEnabled);
bool QStandardItem_IsDropEnabled(const QStandardItem* self);
void QStandardItem_SetDropEnabled(QStandardItem* self, bool dropEnabled);
QStandardItem* QStandardItem_Parent(const QStandardItem* self);
int QStandardItem_Row(const QStandardItem* self);
int QStandardItem_Column(const QStandardItem* self);
QModelIndex* QStandardItem_Index(const QStandardItem* self);
QStandardItemModel* QStandardItem_Model(const QStandardItem* self);
int QStandardItem_RowCount(const QStandardItem* self);
void QStandardItem_SetRowCount(QStandardItem* self, int rows);
int QStandardItem_ColumnCount(const QStandardItem* self);
void QStandardItem_SetColumnCount(QStandardItem* self, int columns);
bool QStandardItem_HasChildren(const QStandardItem* self);
QStandardItem* QStandardItem_Child(const QStandardItem* self, int row);
void QStandardItem_SetChild(QStandardItem* self, int row, int column, QStandardItem* item);
void QStandardItem_SetChild2(QStandardItem* self, int row, QStandardItem* item);
void QStandardItem_InsertRow(QStandardItem* self, int row, const libqt_list /* of QStandardItem* */ items);
void QStandardItem_InsertColumn(QStandardItem* self, int column, const libqt_list /* of QStandardItem* */ items);
void QStandardItem_InsertRows(QStandardItem* self, int row, const libqt_list /* of QStandardItem* */ items);
void QStandardItem_InsertRows2(QStandardItem* self, int row, int count);
void QStandardItem_InsertColumns(QStandardItem* self, int column, int count);
void QStandardItem_RemoveRow(QStandardItem* self, int row);
void QStandardItem_RemoveColumn(QStandardItem* self, int column);
void QStandardItem_RemoveRows(QStandardItem* self, int row, int count);
void QStandardItem_RemoveColumns(QStandardItem* self, int column, int count);
void QStandardItem_AppendRow(QStandardItem* self, const libqt_list /* of QStandardItem* */ items);
void QStandardItem_AppendRows(QStandardItem* self, const libqt_list /* of QStandardItem* */ items);
void QStandardItem_AppendColumn(QStandardItem* self, const libqt_list /* of QStandardItem* */ items);
void QStandardItem_InsertRow2(QStandardItem* self, int row, QStandardItem* item);
void QStandardItem_AppendRow2(QStandardItem* self, QStandardItem* item);
QStandardItem* QStandardItem_TakeChild(QStandardItem* self, int row);
libqt_list /* of QStandardItem* */ QStandardItem_TakeRow(QStandardItem* self, int row);
libqt_list /* of QStandardItem* */ QStandardItem_TakeColumn(QStandardItem* self, int column);
void QStandardItem_SortChildren(QStandardItem* self, int column);
QStandardItem* QStandardItem_Clone(const QStandardItem* self);
int QStandardItem_Type(const QStandardItem* self);
void QStandardItem_Read(QStandardItem* self, QDataStream* in);
void QStandardItem_Write(const QStandardItem* self, QDataStream* out);
bool QStandardItem_OperatorLesser(const QStandardItem* self, const QStandardItem* other);
QStandardItem* QStandardItem_Child2(const QStandardItem* self, int row, int column);
QStandardItem* QStandardItem_TakeChild2(QStandardItem* self, int row, int column);
void QStandardItem_SortChildren2(QStandardItem* self, int column, int order);
void QStandardItem_OperatorAssign(QStandardItem* self, const QStandardItem* other);
void QStandardItem_EmitDataChanged(QStandardItem* self);
void QStandardItem_Delete(QStandardItem* self);